--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 rvm:
   - 2.0.0
-script: bundle exec rspec spec
+script:
+  - bundle exec rake db:migrate RAILS_ENV=test
+  - bundle exec rspec spec
 
